# tsu

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: 2-bug-report.yml  3-feature-request.yml  4-docs-issue.yml
.github/workflows/: ci.yml
assets/themes/: gruvbox.toml
data/: Cargo.toml  build.rs
data/src/: appearance.rs  command.rs  config.rs  editor.rs  environment.rs  lib.rs  pane.rs  shortcut.rs  window.rs
data/src/appearance/: theme.rs
data/src/config/: keys.rs
data/src/window/: position.rs  size.rs
src/: appearance.rs  event.rs  font.rs  icon.rs  main.rs  modal.rs  widget.rs  window.rs
src/appearance/: theme.rs
src/appearance/theme/: checkbox.rs  container.rs  scrollable.rs  selectable_text.rs  text.rs  text_editor.rs  text_input.rs
src/modal/: command_palette.rs
src/screen/: editor.rs
src/screen/editor/: command_palette.rs  pane.rs  theme_editor.rs
src/widget/: anchored_overlay.rs  color_picker.rs  combo_box.rs  context_menu.rs  key_press.rs  modal.rs  selectable_rich_text.rs  selectable_text.rs  shortcut.rs
