[package]
name = "data"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
dev = []

[dependencies]
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "fs"] }
tokio-stream = { workspace = true, features = ["time", "fs"] }
itertools = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
palette = { workspace = true }

flate2 = "1.0"
seahash = "4.1.0"

dirs-next = "2.0.0"
serde_json = "1.0"

iced_core = "0.14.0-dev"
toml = "0.8.11"

[dependencies.serde]
version = "1.0"
features = ["derive", "rc"]

[lints]
workspace = true
